Fix author image spacing

--- a/packages/headline/assets/css/screen.css
+++ b/packages/headline/assets/css/screen.css
@@ -788,7 +788,7 @@ body:not(.home-template) .gh-topic-grid .gh-card {
         margin-top: 24px;
     }
 
-    .gh-author-image {
+    .gh-article-sidebar .gh-author-image {
         grid-row: 1 / 3;
         width: 48px;
         height: 48px;
